--- a/index.html
+++ b/index.html
@@ -25,30 +25,13 @@
         <button onclick="searchButton()" class="btn text-white font-weight-light" type="button">Search</button>
       </div>
     </div>
+    <!-- Details Meal Information -->
+    <section id="meal-details">
+    </section>
     <!-- Meals -->
     <section id="meals">
     </section>
-    <section id="meals-details">
-
-    </section>
-    <!-- <section id="meal-details" class="d-flex flex-column">
-      <img class="meal-details-image d-flex justify-content-center" src="https:\/\/www.themealdb.com\/images\/media\/meals\/58oia61564916529.jpg"  alt="">
-      <div>
-      <h3 class="mt-4">Mustard champ</h3>
-      <p class="font-weight-bold">Ingredients</p>
-      <ul class="font-weight-light">
-        <li id="ingredient-1"></li>
-        <li id="ingredient-2"></li>
-        <li id="ingredient-3"></li>
-        <li id="ingredient-4"></li>
-        <li id="ingredient-5"></li>
-      </ul>
-      </div>
-    </section> -->
   </main>
-
-
-
   <script src="./script.js"></script>
 </body>
 
