--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <!-- Navbar -->
+  <nav class="container navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#">
       <img class="ml-5" style="width:100px" src="./images/hungry-1.png" alt="">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse d-flex justify-content-end mr-5" id="navbarNav">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -36,12 +34,11 @@
           <a class="nav-link" href="#">Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="#">Blogs</a>
         </li>
       </ul>
     </div>
   </nav>
-
 
   <main class="container">
     <!-- Search box -->
